# rest-api-blog

./: .env_example  .gitignore  Makefile  README.md  data_generator.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
blog/: celery.py  settings.py  urls.py
blog/posts/: admin.py  models.py  serializers.py  tasks.py  tests.py  views.py
blog/users/: admin.py  apps.py  models.py  serializers.py  tests.py  views.py
fixtures/: bloggers.json  posts.json  users.json
