[tool.poetry]
name = "rest-api-blog"
version = "0.1.0"
description = "test task for REST API implementation"
authors = ["EvilMadSquirrel <minichev.s.l@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
python-dotenv = "^0.20.0"
djangorestframework = "^3.13.1"
Markdown = "^3.3.7"
django-filter = "^21.1"
psycopg2-binary = "^2.9.3"
drf-nested-routers = "^0.93.4"

[tool.poetry.dev-dependencies]
mixer = "^7.2.2"
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
